--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -6,9 +6,11 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+<app-nav></app-nav>
 <div class="container">
   <h1>
-    Welcome to {{title}}
+    {{title}}
   </h1>
   <app-eventos></app-eventos>
 </div>
